# wallpaper-crop-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  wallpaper_crop_tool.py
wallpaper_crop_tool/: __init__.py  __main__.py  app.py  config.py  crop_cache.py  crop_widget.py  image_io.py  logo.py  main_window.py  models.py  raster_cache.py  ratio_editor.py  ratios.py  worker.py
